[tool.poetry]
name = "toml_env_conf"
version = "0.1.0"
description = ""
authors = ["sa- <github.com/sa->"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
mergedeep = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
