[tool.poetry]
name = "toml_env_conf"
version = "0.1.2"
description = "Environment specific application configuration with TOML"
authors = ["sa-"]
repository = "https://github.com/sa-/toml_env_conf"
documentation = "https://github.com/sa-/toml_env_conf/blob/main/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
mergedeep = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
